# sindri-pixel

./: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/superpowers/plans/: 2026-05-27-welcome-screen-functional.md
scripts/: tauri.mjs
src/: App.tsx  data.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AppMenu.tsx  BuilderPanes.tsx  CanvasView.tsx  CmdK.tsx  ContextMenu.tsx  Icons.tsx  Logo.tsx  PixelSlider.tsx  RightPane.tsx  StatusBar.tsx  Timeline.tsx  ToolsPane.tsx  Topbar.tsx  Tutorial.tsx  Welcome.tsx
src/lib/: storage.ts
src/styles/: tokens.css
