[workspace]

[package]
name = "sindri-pixel"
version = "0.1.0"
edition = "2021"

[lib]
name = "sindri_pixel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
png = "0.17"
gif = "0.13"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["tauri/wry"]
